[tool.poetry]
name = "infrax_node"
version = "0.1.0"
description = ""
authors = ["Kyle Dougan <kdougan@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-box = {extras = ["tomli_w"], version = "^7.1.1"}
loguru = "^0.7.2"
pydantic = "^2.7.1"
fastapi = "^0.110.3"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
httpx = "^0.27.0"
tqdm = "^4.66.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
